@@ -1,5 +1,6 @@
 package sawi.saas.pos.controller;
 
+import jakarta.annotation.PostConstruct;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -9,25 +10,30 @@ import org.springframework.web.filter.CorsFilter;
 
 import java.beans.JavaBean;
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
 
     @Value("${cors.client.ip}")
-    public String CORS_IP_ALLOWED_ORIGIN ;
+    private String corsAllowedOrigin; // Ganti menjadi private
 
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList(CORS_IP_ALLOWED_ORIGIN));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-        config.setAllowCredentials(true);
+        config.setAllowedOrigins(List.of(corsAllowedOrigin)); // Gunakan variabel yang sudah diperbaiki
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        config.setAllowCredentials(true); // Hanya true jika frontend pakai credentials
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return new CorsFilter(source);
+    }
 
+    @PostConstruct
+    public void logCorsConfig() {
+        System.out.println("CORS allowed origin: " + corsAllowedOrigin);
     }
 
 }
